# RuralSideHttpServer

./: .gitignore  CMakeLists.txt  Doxyfile  index.html  main.cpp  tests.cpp  todo.txt
CLI/: Command.cpp  Command.h  CommandParser.h
Configuration/: serverConfig.json
HTTP/: HttpHeader.cpp  HttpHeader.h  HttpMessage.cpp  HttpMessage.h  HttpParser.h  HttpRequestParser.cpp  HttpRequestParser.h  HttpServer.cpp  HttpServer.h
ServiceMonitoring/: ConnectionMonitor.h  Monitor.cpp
Util/: AsyncServer.cpp  AsyncServer.h  Configuration.cpp  Configuration.h  Connection.cpp  Connection.h  Logging.cpp  Logging.h  Resource.cpp  Resource.h  TCPConnection.cpp  TCPConnection.h  Util.cpp  Util.h
